--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,6 @@
     "name": "ride/lib-dependency",
     "description": "Dependency injection library of the Ride framework",
     "license": "MIT",
-    "version": "0.7.0",
     "authors": [
         {
             "name": "Joris Vandeweerd",
@@ -10,8 +9,8 @@
         }
     ],
     "require": {
-        "ride/lib-reflection": ">=0.4.5"
-    }, 
+        "ride/lib-reflection": "^1.0.0"
+    },
     "autoload": {
         "psr-0": {
             "ride\\library\\dependency\\": ["src/", "test/src/"]
