--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         }
     ],
     "require": {
-        "ride/lib-reflection": "^1.0.0"
+        "ride/lib-reflection": "^1.0.0",
+        "php": ">=5.3"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^4.8 | ^5.5 | ^6.5"
     },
     "autoload": {
         "psr-0": {
